--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "vite": "^3.2.3"
   },
   "dependencies": {
+    "dat.gui": "^0.7.9",
+    "gsap": "^3.11.3",
     "three": "^0.146.0"
   }
 }
